force-app/main/default/objects/Stock_Transfer__c/fields/Inventory__c.field-meta.xml
<CustomField>
    <fullName>Inventory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inventory</label>
    <referenceTo>Inventory__c</referenceTo>
    <relationshipLabel>Stock Transfers</relationshipLabel>
    <relationshipName>Stock_Transfers</relationshipName>
    <type>Lookup</type>
</CustomField>