force-app/main/default/objects/Stock_Transfer__c/fields/Stock_Transfer_From__c.field-meta.xml
<CustomField>
    <fullName>Stock_Transfer_From__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Stock Transfer From</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>$Source.Inventory__c</field>
            <operation>equals</operation>
            <valueField>Warehouse__c.Inventory__r.Warehouse__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Warehouse__c</referenceTo>
    <relationshipLabel>Stock Transfer From this Warehouse</relationshipLabel>
    <relationshipName>Stock_Transfer</relationshipName>
    <type>Lookup</type>
</CustomField>