force-app/main/default/objects/Stock_Transfer__c/fields/Stock_Transfer_To__c.field-meta.xml
<CustomField>
    <fullName>Stock_Transfer_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Stock Transfer To</label>
    <referenceTo>Warehouse__c</referenceTo>
    <relationshipLabel>Stock Transfered to this Warehouse</relationshipLabel>
    <relationshipName>Stock_Transfers1</relationshipName>
    <type>Lookup</type>
</CustomField>